--- a/rnn_from_scratch.ipynb
+++ b/rnn_from_scratch.ipynb
@@ -720,6 +720,239 @@
     "rnn = RNN(hidden_size=100, vocab_size=data_reader.vocab_size,seq_length=seq_length,learning_rate=1e-1)\n",
     "rnn.train(data_reader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "# To read the training data and make a vocabulary and dictiornary to index the chars\n",
+    "class DataReader2:\n",
+    "    def __init__(self, seq_length):\n",
+    "        #uncomment below , if you dont want to use any file for text reading and comment next 2 lines\n",
+    "        self.data = \"some really long text to test this. maybe not perfect but should get you going.\"\n",
+    "        #self.fp = open(path, \"r\")\n",
+    "        #self.data = self.fp.read()\n",
+    "        #find unique chars\n",
+    "        chars = list(set(self.data))\n",
+    "        #create dictionary mapping for each char\n",
+    "        self.char_to_ix = {ch:i for (i,ch) in enumerate(chars)}\n",
+    "        self.ix_to_char = {i:ch for (i,ch) in enumerate(chars)}\n",
+    "        #total data\n",
+    "        self.data_size = len(self.data)\n",
+    "        #num of unique chars\n",
+    "        self.vocab_size = len(chars)\n",
+    "        self.pointer = 0\n",
+    "        self.seq_length = seq_length\n",
+    "\n",
+    "    def next_batch(self):\n",
+    "        input_start = self.pointer\n",
+    "        input_end = self.pointer + self.seq_length\n",
+    "        inputs = [self.char_to_ix[ch] for ch in self.data[input_start:input_end]]\n",
+    "        targets = [self.char_to_ix[ch] for ch in self.data[input_start+1:input_end+1]]\n",
+    "        self.pointer += self.seq_length\n",
+    "        if self.pointer + self.seq_length + 1 >= self.data_size:\n",
+    "            # reset pointer\n",
+    "            self.pointer = 0\n",
+    "        return inputs, targets\n",
+    "\n",
+    "    def just_started(self):\n",
+    "        return self.pointer == 0\n",
+    "\n",
+    "    def close(self):\n",
+    "        self.fp.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imtulllaorxthaolallylcddorlrdxxmlyrllllrrlrdrl lxrlrlllldprrltlfrllxol rltfnronaldrrlfduoxtah trylodg nllullt lddlflrryelrblrlgoyrdldhgarrllotailslrc rllpxtsflyyfltylllllcmlxhdarodr.he.nxlllxlllllxrll\n",
+      "\n",
+      "\n",
+      "iter :0, loss:77.276622\n",
+      "thstest this. maybe nou long text to test this. maybe not perfect but should get you goipe test this. maybe not perfect but should get you peald get you goirxt should get you goilully lot t but should\n",
+      "\n",
+      "\n",
+      "iter :500, loss:53.682609\n",
+      "ct but should get you goieet but should get bou notext tut this. maybe not perfect but should get you goiegt but should get you goitethis. maybe not perfect but should get you goise iest this.fmaybt t\n",
+      "\n",
+      "\n",
+      "iter :1000, loss:32.731891\n",
+      "est this. maybt te seut shoully lo get you goib thyut should get you goieft but should get you goilhnbe not perfect but should get you goi trse thbut should get you goild get youlg text to test this. \n",
+      "\n",
+      "\n",
+      "iter :1500, loss:19.935701\n",
+      "ect but should get you goibet but should get you goiset buthshould get you goie t but should get you goiext but should get you goit thould get you goipet yst phould get you goieet but should get you g\n",
+      "\n",
+      "\n",
+      "iter :2000, loss:12.146276\n",
+      "ct bt soulg text to test this. maybe not perfect but should get you goieut yhis. maybe not perfect but should get you goie tibut should gyt you goiedt but should get you goi toie tbbu oou so pgetext t\n",
+      "\n",
+      "\n",
+      "iter :2500, loss:7.407852\n",
+      "est this. malx get you goieft tot this. maybe not perfect but should get you goild get you goitgtt to t this. maybe not perfect but should get you goitat this. maybe not perfect but should get you goi\n",
+      "\n",
+      "\n",
+      "iter :3000, loss:4.525609\n",
+      "ld get you goishoie tost tet you geit toyte thrsealdy lyng text to test this. maybe not perfect but should get you goilu get you goilt get you goit toot xre text to test this. maybe not perfect but sh\n",
+      "\n",
+      "\n",
+      "iter :3500, loss:2.771958\n",
+      "ct but should get you goiegt yot should get you goix t but should get you goit noe perfect but nhould get you goie tobt teut this. mayot to test this. maybt not perfect but should get you goit toy  oo\n",
+      "\n",
+      "\n",
+      "iter :4000, loss:1.704347\n",
+      "es hould get you goieet but should get you goied tett but should get you goilat yheully long text to test this. maybe not perfect but should get you goishould get you goipet but should get you goib to\n",
+      "\n",
+      "\n",
+      "iter :4500, loss:1.053833\n",
+      "t thbuld get you goipet but should get you goithnot thosld get you goild get you goibet but should get you goit thould get you goiect but should get you goitet but phould get you goibet but should get\n",
+      "\n",
+      "\n",
+      "iter :5000, loss:0.656963\n",
+      "ct but should get you goiset bbt should get you goiedt but should get you goiegt but should get you goiet text to test this. maybe not perfect but should get you goiedt but should get you goild get yo\n",
+      "\n",
+      "\n",
+      "iter :5500, loss:0.414380\n",
+      "est yhis. maybe bot perfect but should get you goisfoie not perfect but should get you goi.hoieg tett but should get you goishou goit toe  ooue not perfect but should get you goiset this. maybe not pe\n",
+      "\n",
+      "\n",
+      "iter :6000, loss:0.265725\n",
+      "t tobut tulynyb to test this. maybe not perfect but should get you goilhnle long text to test this. maybe not perfect but should get you goibet but should get you goishoied xbt tout shouldmget be t th\n",
+      "\n",
+      "\n",
+      "iter :6500, loss:0.174298\n",
+      "ct but should get you goipe iout shis.goiegt this. maybe not perfect but should get you goiext but should get you goisd le tot bot perfect but should get you goitet but should get you goild get you go\n",
+      "\n",
+      "\n",
+      "iter :7000, loss:0.117767\n",
+      "out shouldygett to test this. mayot to test this. maybe not perfect but should get you goiedt but shoald get you goiett bot should get you goilct to test this. maybe not perfect but should get you goi\n",
+      "\n",
+      "\n",
+      "iter :7500, loss:0.082567\n",
+      "t tybut should get you goipet yut should get you goiegt yot should get you goiyhould get you goiebt bot should get you goiegt bot should get you goiext bot should get you goie tobt you goiset this. ma\n",
+      "\n",
+      "\n",
+      "iter :8000, loss:0.060430\n",
+      "ct but should get you goishoie not perfect to test this. maybt not perfect but should get you goild get you goit tbet you goitet yut should get you goiest but should get you goild get you goieet but s\n",
+      "\n",
+      "\n",
+      "iter :8500, loss:0.046306\n",
+      "esl t lo get xt to test this. maybe not perfect but should get you goilhnget you goit thbut ihould get you goit toyt  to  eot pelu gotext to test this. maybe not perfect but should get you goila get y\n",
+      "\n",
+      "\n",
+      "iter :9000, loss:0.037132\n",
+      ".t test to test this. mayut thbut should get you goisgoiett st you goit t bu goi toiext this. maybe not perfect but should get you goi goie tot bot perfect but should get you goishoung xext to test th\n",
+      "\n",
+      "\n",
+      "iter :9500, loss:0.031031\n",
+      "ct but should get you goit tont  ou goishould get you goiet iext this. maybe not perfect but should get you goishoulg yeut shis. maybe not perfect but should get you goi hoisd ge t this. maybe norfeon\n",
+      "\n",
+      "\n",
+      "iter :10000, loss:0.026842\n",
+      "est this. maybt to test thiu. mayully long text to test this. maybe not perfect but should get you goiett to test this. mayot this. maybe not perfect but should get you goisd get you goit tobut iut sh\n",
+      "\n",
+      "\n",
+      "iter :10500, loss:0.023869\n",
+      "t tobt you goit this. malbe not perfect but should get you goitetisut should get you goild get you goild get you goisxt this. maybe not perfect but should get you goisfoie tot bot should get you goild\n",
+      "\n",
+      "\n",
+      "iter :11000, loss:0.021679\n",
+      "ct but should get you goishone not to test this. maybt this. maybe not perfect but should get you goie tibt sou goiett but should get you goishou goit tot perfect but should get you goild get you gois\n",
+      "\n",
+      "\n",
+      "iter :11500, loss:0.019992\n",
+      "est this. maybt to test this. mayot thiut should get you goisaoie not perfect but should get you goilx  eot t long text to test this. maybe not perfect but should get you goitetisut should get you goi\n",
+      "\n",
+      "\n",
+      "iter :12000, loss:0.018649\n",
+      "ect but should get you goiyhould get you goied tett tu test this. malo got test this. maybe not perfect but should get you goiett to test this. mayo  euld get you goishoue noe nonget oo perfest thbut \n",
+      "\n",
+      "\n",
+      "iter :12500, loss:0.017544\n",
+      "ct but should get you goile get you goiset this. maybe not perfect but should get you goit not perfect tut this. maybe not perfect but should get you goishoulg test to test thbut shbally long text to \n",
+      "\n",
+      "\n",
+      "iter :13000, loss:0.016601\n",
+      "est this. maybt soe perfect but should get you goibet but should get you goishoi. not perfect but should get you goist test this. maybe not perfect but should get you goibet but should get you goi foo\n",
+      "\n",
+      "\n",
+      "iter :13500, loss:0.015783\n",
+      ". tobt you goiehoie not perfect but should get you goiett to test this. malo  oimt iet gou goiett to test this. maybe not perfect but should get you goild get you goild get you goit this. maybe not pe\n",
+      "\n",
+      "\n",
+      "iter :14000, loss:0.015061\n",
+      "ct but should get you goit not perfect but should get you goithobe to test toise thould get you goit thould get you goiset this. maybe not perfect but should get you goiect but should get you goi toit\n",
+      "\n",
+      "\n",
+      "iter :14500, loss:0.014409\n",
+      "est this. mayot te test this. maybe not perfect but should get you goilt get you goie toyt you goishoie not tetteot this. maybe not perfect but should get you goild get you goisaobe not perfect but sh\n",
+      "\n",
+      "\n",
+      "iter :15000, loss:0.013818\n",
+      "tetybut should get you goispout toist thoilonget xt to test this. maybe not perfect but should get you goisxoget you goishoie not perfect but should get you goishould nou gou goi toie ooe long text to\n",
+      "\n",
+      "\n",
+      "iter :15500, loss:0.013280\n",
+      "ct but should get you goiset bhould get you goieet but should get you goishoit not perfect but should get you goilxt but should get you goisgt to test thlu goild get you goild get you goilanget you go\n",
+      "\n",
+      "\n",
+      "iter :16000, loss:0.012781\n",
+      "eut thbullyhbully long text to test this. maybe not perfect but should get you goishoied iou goishoie not perfect but should get you goishou. noe te test this. mayot thiut should get you goild get you\n",
+      "\n",
+      "\n",
+      "iter :16500, loss:0.012320\n",
+      "t tobt you goiehou goiet you goiext but should get you goishould you goied test this. maybe not perfect but should get you goieeniet you goisgoie toe long text to test this. maybe not perfect but shou\n",
+      "\n",
+      "\n",
+      "iter :17000, loss:0.011893\n",
+      "ct but should get you goi hois mxt  o g text to test this. maybe not perfect but should get you goiegt bot soouperfect but should get you goiect but should get you goisaobe not perfect but should get \n",
+      "\n",
+      "\n",
+      "iter :17500, loss:0.011492\n",
+      "est this. mayut thbu  yhbuldyg t you goiect but should get you goie thyut should get you goiset bhould get you goilhnbe long text to test this. maybe not perfect but should get you goieet but should g\n",
+      "\n",
+      "\n",
+      "iter :18000, loss:0.011117\n",
+      "t this. moyut not perfect but should get you goisd get you goishould nou goutgt not perfect but should get you goiet test this. maybe not perfect but should get you goit toit  oo goiset soo perfect bu\n",
+      "\n",
+      "\n",
+      "iter :18500, loss:0.010768\n",
+      "ct but should get you goishnut mong  not perfect but should get you goib toyt you goi text to test this. maybe not perfect but should get you goishoie  oo long text to test this. maybe not perfect but\n",
+      "\n",
+      "\n",
+      "iter :19000, loss:0.010437\n",
+      "out thbut thbut should get you goisct but should get you goiedt bot should get you goi goie not perfect but should get you goieet but should get you goilx get you goile le lon perfext shis. pet loog t\n",
+      "\n",
+      "\n",
+      "iter :19500, loss:0.010125\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq_length = 25\n",
+    "#read text from the \"input.txt\" file\n",
+    "data_reader = DataReader2(seq_length)\n",
+    "rnn = RNN(hidden_size=100, vocab_size=data_reader.vocab_size,seq_length=seq_length,learning_rate=1e-1)\n",
+    "rnn.train(data_reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
