--- a/rnn_from_scratch.ipynb
+++ b/rnn_from_scratch.ipynb
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,229 @@
       "ing and I love to do whatiuning and I love to do whatul day, the sun is shining and I love to do whatiy, suning and I love to do whatitiful day, the sun is shining and I love to do whatil day, the sun\n",
       "\n",
       "\n",
-      "iter :22000, loss:0.024061\n"
+      "iter :22000, loss:0.024061\n",
+      "iful day, the sun is shining and I love to do whatishshining and I love to do whatil day, the sun is shining and I love to do whatis a beautiful day, the sun is shining and I love to do whatitofsu a b\n",
+      "\n",
+      "\n",
+      "iter :22500, loss:0.023418\n",
+      "ay, the sun is shining and I love to do whatiu shining and I love to do whatis shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatiHefutiful day, the sun is s\n",
+      "\n",
+      "\n",
+      "iter :23000, loss:0.022814\n",
+      "ing and I love to do whatiunind I love to do whatis shining and I love to do whatil day, the sun is shining and I love to do whatwhatis aabeautiful day, the sun is shining and I love to do whatiy,ful \n",
+      "\n",
+      "\n",
+      "iter :23500, loss:0.022239\n",
+      "iful day, the sun is shining and I love to do whatiun is a beautiful day, the sun is shining and I love to do whatibeautiful day, the sun is shining and I love to do whatis a beautiful day, the sun is\n",
+      "\n",
+      "\n",
+      "iter :24000, loss:0.021694\n",
+      "ay, the sun is shining and I love to do whatiusa beautiful day, the sun is shining and I love to do whatay, the sun is shining and I love to do whatwhatiuntay, the sun is shining and I love to do what\n",
+      "\n",
+      "\n",
+      "iter :24500, loss:0.021180\n",
+      "ing and I love to do whatibeautiful day, the sun is shining and I love to do whatiupiib and I love to do whatiuna d a love to do whatin fay, the sun is shining and I love to do whatis a beautiful day,\n",
+      "\n",
+      "\n",
+      "iter :25000, loss:0.020688\n",
+      "iful day, the sun is shining and I love to do whatiun ib a beautiful day, the sun is shining and I love to do whatiutful day, the sun is shining and I love to do whatis a beautiful day, the sun is shi\n",
+      "\n",
+      "\n",
+      "iter :25500, loss:0.020219\n",
+      "ay, the sun is shining and I love to do whatil day, the sun is shining and I love to do whatit,ful day, the sun is shining and I love to do whatibeautiful day, the sun is shining and I love to do what\n",
+      "\n",
+      "\n",
+      "iter :26000, loss:0.019774\n",
+      "ing and I love to do whatitifubeautiful day, the sun is shining and I love to do whatiuns beautiful day, the sun is shining and I love to do whatineasl a beautiful day, the sun is shining and I love t\n",
+      "\n",
+      "\n",
+      "iter :26500, loss:0.019347\n",
+      "iful day, the sun is shining and I love to do whatiuning a beautiful day, the sun is shining and I love to do whatiunisg and I love to do whatis t beautiful day, the sun is shining and I love to do wh\n",
+      "\n",
+      "\n",
+      "iter :27000, loss:0.018938\n",
+      "itiful day, the sun is shining and I love to do whatwhatit,futiful day, the sun is shining and I love to do whatay, the sun is shining and I love to do whatiy,ful day, the sun is shining and I love to\n",
+      "\n",
+      "\n",
+      "iter :27500, loss:0.018548\n",
+      "ing and I love to do whatiy, th I love to do whatiu, is a beautiful day, the sun is shining and I love to do whatiun is a beautiful day, the sun is shining and I love to do whatitofayaisg and I love t\n",
+      "\n",
+      "\n",
+      "iter :28000, loss:0.018171\n",
+      "iful day, the sun is shining and I love to do whatiu a beautiful day, the sun is shining and I love to do whatiy, whatilbfweatitiful day, the sun is shining and I love to do whatih tay, the sun is shi\n",
+      "\n",
+      "\n",
+      "iter :28500, loss:0.017810\n",
+      "ay, the sun is shining and I love to do whatis a beautiful day, the sun is shining and I love to do whatiutful day, the sun is shining and I love to do whatibefutiful day, the sun is shining and I lov\n",
+      "\n",
+      "\n",
+      "iter :29000, loss:0.017465\n",
+      "ing and I love to do whatiuta t a beautiful day, the sun is shining and I love to do whatis a beautiful day, the sun is shining and I love to do whatil day, the sun is shining and I love to do whatibe\n",
+      "\n",
+      "\n",
+      "iter :29500, loss:0.017130\n",
+      "iful day, the sun is shining and I love to do whatiunisg and I love to do whatil day, the sun is shining and I love to do whatishshining and I love to do whatitdfubeautiful day, the sun is shining atd\n",
+      "\n",
+      "\n",
+      "iter :30000, loss:0.016807\n",
+      "ay, the sun is shining and I love to do whatiuni b autiful day, the sun is shining aud I love to do whatiy,ful day, the tun is shining and I love to do whatis a beautiful day, the sun is shining and I\n",
+      "\n",
+      "\n",
+      "iter :30500, loss:0.016498\n",
+      "ing and I love to do whatiundido whatilove to do whatis a beautiful day, the sun is shining and I love to do whatiunisg and I love to do whatitofay aabeautiful day, the sun is shining and I love to do\n",
+      "\n",
+      "\n",
+      "iter :31000, loss:0.016198\n",
+      "iful day, the sun is shining and I love to do whatiuns beautiful day, the sun is shining and I love to do whatiptfadove to do whatitHful day, the sun is shining and I love to do whatiuna beautiful day\n",
+      "\n",
+      "\n",
+      "iter :31500, loss:0.015907\n",
+      "wyatil day, the sun is shining and I love to do whatibeautiful day, the sun is shining and I love to do whatinovatt whatis shining and I love to do whatinofabeautiful day, the sun is shining and I lov\n",
+      "\n",
+      "\n",
+      "iter :32000, loss:0.015627\n",
+      "ing and I love to do whatitgful day, the sun is shining and I love to do whatiuo is a beautiful day, the sun is shining and I love to do whatil fay, the sun is shining and I love to doIwhatiuntis a be\n",
+      "\n",
+      "\n",
+      "iter :32500, loss:0.015353\n",
+      "iful day, the sun is shining and I love to do whatig aay, the sun is shining and I love to do whatingfsbeautiful day, the sun is shining and I love to do whatihe sun is shining and I love to do whatiy\n",
+      "\n",
+      "\n",
+      "iter :33000, loss:0.015086\n",
+      "iy, the sun is shining and I love to do whatwlatwhatitifub autiful day, the sun is shining and I love to do whatiupHibeautiful day, the sun is shining and I love to do whatit:ful day, the sun is shini\n",
+      "\n",
+      "\n",
+      "iter :33500, loss:0.014827\n",
+      "ing and I love to do whatay, the sun is shining and I love to do whatiuta s a beautiful day, the sun is shining and I love to do whatis shining and I love to do whatiunasbeautiful day, the sun is shin\n",
+      "\n",
+      "\n",
+      "iter :34000, loss:0.014573\n",
+      "iful day, the sun is shining and I love to do whatiuda beautiful day, the sun is shining and I love to do whatiutful day, the sun is shining and I love to do whatitdful day, the sun is shining and I l\n",
+      "\n",
+      "\n",
+      "iter :34500, loss:0.014327\n",
+      "ay, the sun is shining and I love to do whatitofuy aay, the sun is shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatiud is a beautiful day, the sun is shini\n",
+      "\n",
+      "\n",
+      "iter :35000, loss:0.014089\n",
+      "ing and I love to do whatis a beautiful day, the sun is shining and I love to do whatitishining and I love to do whatiuntib anbeautiful day, the sun is shining and I love to do whatiunais a beautiful \n",
+      "\n",
+      "\n",
+      "iter :35500, loss:0.013858\n",
+      "iful day, the sun is shining and I love to do whatis a beautiful day, the sun is shining and I love to do whatitmful day, the sun is shining and I love to do whatiunday, the sun is shining and I love \n",
+      "\n",
+      "\n",
+      "iter :36000, loss:0.013634\n",
+      "ilove to do whatiuto dove to do whatit:ful day, the sun is shining and I love to do whatiloday, the sun is shining and I love to do whatiu ing and I love to do whatitwful I love to do whatilovehe sun \n",
+      "\n",
+      "\n",
+      "iter :36500, loss:0.013419\n",
+      "ing and I love to do whatiund do whatiuvs beautiful day, the sun is shining and I love to do whatitdful day, the sun is shining and I love to do whatil day, the sun is shining and I love to do whatiun\n",
+      "\n",
+      "\n",
+      "iter :37000, loss:0.013208\n",
+      "iful day, the sun is shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatiut ss a beautiful day, the sun is shining and I love to do whatiut su a d I love to d\n",
+      "\n",
+      "\n",
+      "iter :37500, loss:0.013003\n",
+      "sto whatitiful day, the sun is shining and I love to do whatil day, the sun is shining and I love to do whatiu a beautiful day, the sun is shining and I love to do whatiy,fsuning and I love to do what\n",
+      "\n",
+      "\n",
+      "iter :38000, loss:0.012804\n",
+      " is a beautiful day, the sun is shining and I love to do whatag aado whatiu inbeautiful day, the sun is shining and I love to do whatisofabeautiful day, the sun is shining and I love to do whatiuns be\n",
+      "\n",
+      "\n",
+      "iter :38500, loss:0.012608\n",
+      "iful day, the sun is shining and I love to do whatitiful day, the sun is shining and I love to do whatil day, the sun is shining and I love to do whatibeaag a beautiful day, the sun is shining and I l\n",
+      "\n",
+      "\n",
+      "iter :39000, loss:0.012416\n",
+      "isoshining and I love to do whatiudful day, the sun is shining and I love to do whatiydful day, the sun is shining and I love to do whatibeautiful day, the sun is shining and I love to do whatisda bea\n",
+      "\n",
+      "\n",
+      "iter :39500, loss:0.012232\n",
+      "ing and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatil auy, the sun is shining and I love to do whatiuna d I love to do whatiuns beautiful day, the sun is shining \n",
+      "\n",
+      "\n",
+      "iter :40000, loss:0.012053\n",
+      "iful day, the sun is shining and I love to do whatido whatiupful day, the sun is shining and I love to do whatihetsun is shining and I love to do whatil day, the sun is shining and I love to do whatiu\n",
+      "\n",
+      "\n",
+      "iter :40500, loss:0.011879\n",
+      "sy, the sun is shining and I love to do whatiuaful day, the sun is shining and I love to do whatiunv te the sun is shining and I love to do whatiun is a beautiful day, the sun is shining and I love to\n",
+      "\n",
+      "\n",
+      "iter :41000, loss:0.011712\n",
+      "ing and I love to do whatitofal day, the sun is shining and I love to do whatitofup day, the sun is shining and I love to do whatitdful day, the sun is shining and I love to do whatis a beautiful day,\n",
+      "\n",
+      "\n",
+      "iter :41500, loss:0.011547\n",
+      "iful day, the sun is shining and I love to do whatiunsui a ining and I love to do whatiuniid I love to do whatiyoful day, the sun is shining and I love to do whatiuI is a beautiful day, the sun is shi\n",
+      "\n",
+      "\n",
+      "iter :42000, loss:0.011387\n",
+      "ito whatitefutiful day, the sun is shining and I love to do whatitifhl a beautiful day, the sun is shining and I love to do whatitiful day, the sun is shining and I love to do whatis shining and I lov\n",
+      "\n",
+      "\n",
+      "iter :42500, loss:0.011232\n",
+      "ing and I love to do whatiunaib aubeautiful day, the sun is shining and I love to do whatitpful day, the sun is shining and I love to do whatittful day, the sun is shining and I love to do whatit,ful \n",
+      "\n",
+      "\n",
+      "iter :43000, loss:0.011080\n",
+      "iful day, the sun is shining and I love to do whatiy,ful day, the sun is shining and I love to do whatitiful day, the sun is shining and I love to do whatitiful day, the sun is shining and I love to d\n",
+      "\n",
+      "\n",
+      "iter :43500, loss:0.010932\n",
+      "ay, the sun is shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatitiful day, the sun is shining and I love to do whatitgfay a beautiful day, the sun is shini\n",
+      "\n",
+      "\n",
+      "iter :44000, loss:0.010788\n",
+      "ing and I love to do whatis s beautiful day, the sun is shining and I love to do whatibe utiful day, the sun is shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do\n",
+      "\n",
+      "\n",
+      "iter :44500, loss:0.010646\n",
+      "iful day, the sun is shining and I love to do whatiu a beautiful day, the sun is shining and I love to do whatisafhining and I love to do whatiut is a beautiful day, the sun is shining and I love to d\n",
+      "\n",
+      "\n",
+      "iter :45000, loss:0.010507\n",
+      "ay, the sun is shining and I love to do whati,tfsbeautiful day, the sun is shining and I love to do whatwhatiutfis a beautiful day, the sun is shining and I love to do whatilove to do whatihatwyatiuov\n",
+      "\n",
+      "\n",
+      "iter :45500, loss:0.010373\n",
+      "ing and I love to do whatindfsy, the sun is shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatitiful day, the sun is shining and I love to do whatiuto do wha\n",
+      "\n",
+      "\n",
+      "iter :46000, loss:0.010240\n",
+      "iful day, the sun is shining and I love to do whatiunisg and I love to do whatiy,ful day, the sun is shining and I love to do whatiut is a beautiful day, the sun is shining and I love to do whatiteful\n",
+      "\n",
+      "\n",
+      "iter :46500, loss:0.010111\n",
+      "Epoch 1/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 2/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 3/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 4/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 5/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 6/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 7/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 8/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 9/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 10/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 11/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 12/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 13/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 14/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 15/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 16/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 17/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 18/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 19/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 20/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 21/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 22/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 23/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 24/25 completed with loss: 0.009999395064993774\n",
+      "Epoch 25/25 completed with loss: 0.009999395064993774\n",
+      "hello dsun sun is a beautiful day, the sun is shining a\n"
      ]
     }
    ],
